--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     {% endblock %}
 
     <meta property="og:title" content="{{title|striptags}}" />
-    <meta property="og:url" content="https://www.sefaria.org{{ request.path }}" />
+    <meta property="og:url" content="{{ request.build_absolute_uri }}" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@sefariaproject" />
