--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -63,7 +63,7 @@
                                 <span class="int-en">Lev Israel</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Chief Data Officer</span>
+                                <span class="int-en">Chief Product Officer</span>
                             </div>
                         </div>
                     </div>
