--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -63,7 +63,7 @@
                                 <span class="int-he">לב ישראל</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">מנהל נתונים ראשי</span>
+                                <span class="int-he">מנהל מוצר ראשי</span>
                             </div>
                         </div>
                     </div>
