About page update

--- a/templates/static/en/about.html
+++ b/templates/static/en/about.html
@@ -252,6 +252,18 @@
                     <span class="int-en">Sefaria hits record traffic with 500,000/users in a month – a full year ahead of our goal.</span>
                 </section>
             </section>
+            <section>
+                <header><h2 class="year">2021</h2></header>
+                <section class="historyItem">
+                    <span class="int-en">Sefaria unveils a major site redesign which lines the library with explanatory text and features.</span>
+                </section>
+                <section class="historyItem">
+                    <span class="int-en">Sefaria overcomes copyright hurdles to add the works of major female scholars to the library, including the first woman to be included in Sefaria’s official list of Talmud commentators, Dr. Judith Hauptman.</span>
+                </section>
+                <section class="historyItem">
+                    <span class="int-en">Sefaria adds major classic works in English to the library, including Ramban and Ibn Ezra on Torah, Rashi on Tanakh, the Jerusalem Talmud, and more.</span>
+                </section>
+            </section>
         </section>
     </div>
 </main>
