--- a/templates/static/he/about.html
+++ b/templates/static/he/about.html
@@ -257,6 +257,18 @@
                     <span class="int-he">ספריא מגיעה לשיא של תנועת גולשים באתר: 500,000 משתמשים ומשתמשות בחודש. ציפינו שהיעד הזה יתממש רק בעוד שנה שלמה!</span>
                 </section>
             </section>
+            <section>
+                <header><h2 class="year">2021</h2></header>
+                <section class="historyItem">
+                    <span class="int-he"> ספריה עוברת עיצוב מחדש של ממשק המשתמש, אשר מעשיר את חווית השימוש בפסקאות הסבר ותכנים נוספים לטובת הלומדים.</span>
+                </section>
+                <section class="historyItem">
+                    <span class="int-he">ספריא מתגברת על מכשולים בתחום זכויות יוצרים כדי להוסיף לספריה יצירות של חוקרות מרכזיות, כולל האשה הראשונה שנכללת ברשימת פרשני התלמוד הרשמית של ספריא, ד"ר יהודית האופטמן.</span>
+                </section>
+                <section class="historyItem">
+                    <span class="int-he">ספריא מוסיפה לספריה יצירות קלאסיות מרכזיות באנגלית, כולל רמב"ן ואבן עזרא על התורה, רש"י על התנ"ך, התלמוד הירושלמי ועוד.</span>
+                </section>
+            </section>
         </section>
     </div>
 </main>
