--- a/static/css/static.css
+++ b/static/css/static.css
@@ -3131,6 +3131,10 @@ display: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 0 0 6px 6px;
   border-top: black 4px solid;
+  min-height: 230px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .staticPage.donate .simpleButtonWrapper {
