--- a/static/css/static.css
+++ b/static/css/static.css
@@ -2847,7 +2847,7 @@ display: none;
   background-repeat: no-repeat;
   background-size: cover;
   padding: 70px 0 30px;
-  background-position: 50% 0%;
+  background-position: bottom right;
 }
 .staticPage .staticPageCallToActionFooter {
   background-color: #212E50;
