update donate button

--- a/templates/messages/13042022-passover-donate-banner.html
+++ b/templates/messages/13042022-passover-donate-banner.html
@@ -8,7 +8,7 @@
 </div>
 <div id="bannerButtonBox">
 	<a class="button white int-en" href="https://sefaria.nationbuilder.com/supportsefaria_web">
-        <span>Double</span>
+        <span>Donate</span>
     </a>
     <a class="button white int-he" href="https://sefaria.nationbuilder.com/il_whb">
         <span>לתרומה</span>
