get styling for account settings google acct button working

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -4488,6 +4488,9 @@ body .ui-autocomplete.dictionary-toc-autocomplete .ui-menu-item a.ui-state-focus
 #accountSettingsPage .toggleSet {
   display: flex;
 }
+#accountSettingsPage .additional-info {
+  color: var(--dark-grey);
+}
 .toggleSet.aliyotTorah, .toggleSet.punctuationTalmud, .toggleSet .toggle-set-label {
   --english-font: var(--english-sans-serif-font-family);
   --hebrew-font: var(--english-sans-serif-font-family);
