--- a/templates/account_settings.html
+++ b/templates/account_settings.html
@@ -117,7 +117,7 @@
                 <span class="int-en">Change Email</span>
                 <span class="int-he">החלפת כתובת דוא"ל</span>
             </button>
-            <span id="email-edit-ok"></span>
+            <span id="email-edit-ok" style="display:none"></span>
         </div>
         <div id="username-change-edit" class="form-section" style="display: none">
             <input id="email" type="text" placeholder="{% trans "New Email" %}" autocomplete="off" />
@@ -128,6 +128,24 @@
                 <span class="int-he">עדכון כתובת דוא"ל</span>
             </button>
             <span id="email-edit-errors"></span>
+        </div>
+    </div>
+    <div id="google-email-change" class="section">
+        <label class="control-elem">
+                <span class="int-en">Google Account (Allows for exporting sheets to Google Drive)</span>
+                <span class="int-he">חשבון גוגל מקושר (מאפשר ייצוא דפי מקורות לגוגל דרייב)</span>
+        </label>
+        <div id="google-email-disconnect-display" class="form-section">
+            <input id="google-email-display" type="text" disabled="disabled" value="{{ user.email }}" />
+            <button id="disconnect-google-email" type="button" class="button blue fillWidth">
+                <span class="int-en">Disconnect</span>
+                <span class="int-he">ניתוק מהחשבון</span>
+            </button>
+        </div>
+    </div>
+    <div id="google-email-disconnected" class="form-section" style="display: none">
+            <div><span class="int-en">Your Google Account has been disconnected</span></div>
+            <div class="additional-info"><span class="int-en">You can link to a new Google Account the next time you export a sheet</span></div>
         </div>
     </div>
 	</div>
@@ -203,6 +221,11 @@
                 $("#username-change-edit").toggle();
             });
 
+            $("#disconnect-google-email").click(function () {
+                $("#google-email-change").toggle();
+                $("#google-email-disconnected").toggle();
+            });
+
             $("#update-email").click(function(){
 				const user_details = {
                     email: $("#username-change-edit #email").val(),
@@ -213,6 +236,7 @@
 					if ("error" in data) {
 						$("#username-change-edit #email-edit-errors").text(data.error);
 					} else {
+                        $("#username-change-display #email-edit-ok").show();
 					    $("#username-change-display #email-edit-ok").text(Sefaria._("Email was successfully changed!")).show();
                         $("#username-change-display #email-display").val(user_details["email"]);
                         $("#username-change-display").toggle();
