change google to gauth for gauth email

--- a/templates/account_settings.html
+++ b/templates/account_settings.html
@@ -130,20 +130,20 @@
             <span id="email-edit-errors"></span>
         </div>
     </div>
-    <div id="google-email-change" class="section">
+    <div id="gauth-email-change" class="section">
         <label class="control-elem">
                 <span class="int-en">Google Account (Allows for exporting sheets to Google Drive)</span>
                 <span class="int-he">חשבון גוגל מקושר (מאפשר ייצוא דפי מקורות לגוגל דרייב)</span>
         </label>
-        <div id="google-email-disconnect-display" class="form-section">
-            <input id="google-email-display" type="text" disabled="disabled" value="{{ user.email }}" />
-            <button id="disconnect-google-email" type="button" class="button blue fillWidth">
+        <div id="gauth-email-disconnect-display" class="form-section">
+            <input id="gauth-email-display" type="text" disabled="disabled" value="{{ user.email }}" />
+            <button id="disconnect-gauth-email" type="button" class="button blue fillWidth">
                 <span class="int-en">Disconnect</span>
                 <span class="int-he">ניתוק מהחשבון</span>
             </button>
         </div>
     </div>
-    <div id="google-email-disconnected" class="form-section" style="display: none">
+    <div id="gauth-email-disconnected" class="form-section" style="display: none">
             <div><span class="int-en">Your Google Account has been disconnected</span></div>
             <div class="additional-info"><span class="int-en">You can link to a new Google Account the next time you export a sheet</span></div>
         </div>
@@ -221,9 +221,9 @@
                 $("#username-change-edit").toggle();
             });
 
-            $("#disconnect-google-email").click(function () {
-                $("#google-email-change").toggle();
-                $("#google-email-disconnected").toggle();
+            $("#disconnect-gauth-email").click(function () {
+                $("#gauth-email-change").toggle();
+                $("#gauth-email-disconnected").toggle();
             });
 
             $("#update-email").click(function(){
