fix hebrew translation on settings page

--- a/templates/account_settings.html
+++ b/templates/account_settings.html
@@ -145,8 +145,14 @@
         </div>
     </div>
     <div id="gauth-email-disconnected" class="form-section" style="{% if profile.gauth_email %} display: none {% endif %}" >
-            <div><span class="int-en">Your Google Account has been disconnected</span></div>
-            <div class="additional-info"><span class="int-en">You can link to a new Google Account the next time you export a sheet</span></div>
+            <div>
+                <span class="int-en">Your Google Account has been disconnected</span>
+                <span class="int-he">חשבון הגוגל שלכם נותק בהצלחה</span>
+            </div>
+            <div class="additional-info">
+                <span class="int-en">You can link to a new Google Account the next time you export a sheet</span>
+                <span class="int-he">תוכלו להתחבר מחדש לחשבון גוגל בפעם הבאה שתייצאו לשם דף מקורות</span>
+            </div>
         </div>
     </div>
 	</div>
