move save button

--- a/templates/account_settings.html
+++ b/templates/account_settings.html
@@ -5,22 +5,11 @@
 
 <div id="accountSettingsPage" class="static biReady">
 	<div class="inner">
-	<div class="headerWithButtons">
-        <div class="start"></div>
+	<div>
         <h1>
             <span class="int-en">Account Settings</span>
             <span class="int-he">הגדרות חשבון</span>
         </h1>
-        <div class="end">
-            <a class="button small transparent control-elem" href="/my/profile">
-                <span class="int-en">Cancel</span>
-                <span class="int-he">ביטול</span>
-            </a>
-            <div id="saveAccountSettings" class="button small blue control-elem" tabindex="0" role="button" >
-                <span class="int-en">Save</span>
-                <span class="int-he">שמירה</span>
-            </div>
-        </div>
     </div>
 	<div id="emailNotifications" class="section">
 		<label class="control-elem">
@@ -153,6 +142,16 @@
                 <span class="int-en">You can link to a new Google Account the next time you export a sheet</span>
                 <span class="int-he">תוכלו להתחבר מחדש לחשבון גוגל בפעם הבאה שתייצאו לשם דף מקורות</span>
             </div>
+        </div>
+        <div class="saveCancel">
+            <div id="saveAccountSettings" class="button blue control-elem" tabindex="0" role="button" >
+                <span class="int-en">Save</span>
+                <span class="int-he">שמירה</span>
+            </div>
+            <a class="button transparent control-elem" href="/my/profile">
+                <span class="int-en">Cancel</span>
+                <span class="int-he">ביטול</span>
+            </a>
         </div>
     </div>
 	</div>
