Update jobs page

--- a/templates/static/jobs.html
+++ b/templates/static/jobs.html
@@ -50,17 +50,23 @@
         </section>--->
         <section class="section department englishOnly">
             <header>
-                <h2 class="anchorable">Marketing and Communications</h2>
+                <h2 class="anchorable">Learning Team</h2>
             </header>
             <section class="jobsListForDepartment">
-                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/1184118c6103-marketing-content-strategist-and-writer">Marketing Content Strategist and Writer</a></div>
+                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/744c4983e18d-learning-and-engagement-associate">Learning and Outreach Associate</a></div>
             </section>
         </section>
-       <!--- <section class="section department englishOnly">
+       <section class="section department englishOnly">
             <header>
                 <h2 class="anchorable">Product</h2>
             </header>
-        </section>--->
+           <section class="jobsListForDepartment">
+                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/e8fe9eb0b9de-technical-project-manager-israel">Technical Project Manager - Israel</a></div>
+            </section>
+           <section class="jobsListForDepartment">
+                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/33de7d4df512-technical-project-manager-us">Technical Project Manager - US</a></div>
+            </section>
+        </section>
         <!---<section class="section department englishOnly">
             <header>
                 <h2 class="anchorable">Operations</h2>
