Jobs page - copy fix

--- a/templates/static/jobs.html
+++ b/templates/static/jobs.html
@@ -53,7 +53,7 @@
                 <h2 class="anchorable">Learning Team</h2>
             </header>
             <section class="jobsListForDepartment">
-                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/744c4983e18d-learning-and-engagement-associate">Learning and Outreach Associate</a></div>
+                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/744c4983e18d-learning-and-engagement-associate">Learning and Engagement Associate</a></div>
             </section>
         </section>
        <section class="section department englishOnly">
