jobs page update

--- a/templates/static/jobs.html
+++ b/templates/static/jobs.html
@@ -55,6 +55,9 @@
             <section class="jobsListForDepartment">
                 <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/744c4983e18d-learning-and-engagement-associate">Learning and Engagement Associate</a></div>
             </section>
+            <section class="jobsListForDepartment">
+                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/98fe09a82af8-hebrew-editorial-assistant-contract-position">Hebrew Editorial Assistant – Contract Position</a></div>
+            </section>
         </section>
        <section class="section department englishOnly">
             <header>
