--- a/templates/static/en/powered-by.html
+++ b/templates/static/en/powered-by.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% load i18n static %}
 
-{% block title %}{% trans "Donate to Sefaria" %}{% endblock %}
+{% block title %}{% trans "Powered by Sefaria" %}{% endblock %}
 
-{% block description %}{% trans "Support Sefaria by making a tax-deductible donation online or by check or wire transfer." %}{% endblock %}
+{% block description %}{% trans "" %}{% endblock %}
 
 {% block css %}
 {% endblock %}
