--- a/templates/static/en/powered-by.html
+++ b/templates/static/en/powered-by.html
@@ -3,9 +3,12 @@
 
 {% block title %}{% trans "Powered by Sefaria" %}{% endblock %}
 
-{% block description %}{% trans "" %}{% endblock %}
+{% block description %}{% trans "Sefaria’s open data and API can be used by anyone.  You can find it all for free in our GitHub repository!" %}{% endblock %}
 
 {% block css %}
+.staticPage .staticPageHeader {
+    background-image: url(/static/img/powered-by-landing-page/PBS_header.png);
+}
 {% endblock %}
 
 
