--- a/templates/static/powered-by.html
+++ b/templates/static/powered-by.html
@@ -17,6 +17,11 @@
     {% autoescape off %}
     DJANGO_VARS.containerId = 'PoweredByInner';
     DJANGO_VARS.reactComponentName = 'PoweredByPage';
+    ['body', '#content'].forEach(q => {
+            const cl = document.querySelector(q).classList;
+            cl.remove('interface-hebrew');
+            cl.add('interface-english');
+        });
     {% endautoescape %}
 </script>
 {% endblock %}
