get lists of texts to wrap nicely on Translations pages

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -2096,6 +2096,8 @@ div.interfaceLinks-row a {
 }
 .translationsPage details > ul {
   padding: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 .translationsPage details > ul > li:after {
   content: "\2022";
