--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -1662,6 +1662,9 @@ div.interfaceLinks-row a {
   margin: 0 5px;
 }
 
+.readerPanel .translationsPage h2 {
+  margin: 40px 0 34px 0;
+}
 
 .navSidebarLink .languageItem, .translationsPage .languageItem {
   display: inline;
@@ -2096,6 +2099,7 @@ div.interfaceLinks-row a {
 }
 .translationsPage details > ul {
   padding: 0;
+  margin: 22px 0;
   display: flex;
   flex-wrap: wrap;
 }
