--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -4491,14 +4491,11 @@ body .ui-autocomplete.dictionary-toc-autocomplete .ui-menu-item a.ui-state-focus
 #accountSettingsPage .additional-info {
   color: var(--dark-grey);
 }
-#accountSettingsPage .saveCancel {
+/* #accountSettingsPage .saveCancel {
   display: flex;
   justify-content: space-between;
   margin-top: 30px;
-}
-#accountSettingsPage #saveAccountSettings {
-  flex-basis: 100%;
-}
+} */
 .toggleSet.aliyotTorah, .toggleSet.punctuationTalmud, .toggleSet .toggle-set-label {
   --english-font: var(--english-sans-serif-font-family);
   --hebrew-font: var(--english-sans-serif-font-family);
