--- a/templates/static/jobs.html
+++ b/templates/static/jobs.html
@@ -48,15 +48,15 @@
                 <h2 class="anchorable">Engineering</h2>
             </header>
         </section>--->
-        <section class="section department englishOnly">
+        <!---<section class="section department englishOnly">
             <header>
                 <h2 class="anchorable">Learning Team</h2>
             </header>
             <section class="jobsListForDepartment">
-                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/744c4983e18d-learning-and-engagement-associate">Learning and Engagement Associate</a></div>
+                <div class="job"><a class="jobLink" target="_blank" href=""></a></div>
             </section>
             <section class="jobsListForDepartment">
-                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/98fe09a82af8-hebrew-editorial-assistant-contract-position">Hebrew Editorial Assistant – Contract Position</a></div>
+                <div class="job"><a class="jobLink" target="_blank" href="">n</a></div>
             </section>
         </section>
        <section class="section department englishOnly">
@@ -64,13 +64,13 @@
                 <h2 class="anchorable">Product</h2>
             </header>
            <section class="jobsListForDepartment">
-                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/e8fe9eb0b9de-technical-project-manager-israel">Technical Project Manager - Israel</a></div>
+                <div class="job"><a class="jobLink" target="_blank" href=""></a></div>
             </section>
            <section class="jobsListForDepartment">
-                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/33de7d4df512-technical-project-manager-us">Technical Project Manager - US</a></div>
+                <div class="job"><a class="jobLink" target="_blank" href=""></a></div>
             </section>
         </section>
-        <!---<section class="section department englishOnly">
+        <section class="section department englishOnly">
             <header>
                 <h2 class="anchorable">Operations</h2>
             </header>
@@ -81,7 +81,7 @@
             </header>
         </section>--->
         
-        <!---<div class="section">
+        <div class="section nothing">
             <p>
                 <span class="int-en">
                     Sefaria does not currently have any open positions.
@@ -94,7 +94,7 @@
                     כדי להשאר מעודכנים במשרות עתידיות.
                 </span>
             </p>
-        </div>--->
+        </div>
 
         <aside class="solicitationNotice">
             <p>
