--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -1241,6 +1241,11 @@ div.interfaceLinks-row a {
   display: flex;
   padding: 6px 12px;
 }
+.ui-autocomplete .ui-menu-last-item {
+  border-top:  1px solid var(--lighter-grey);
+  display: flex;
+  padding: 6px 12px;
+}
 .interface-hebrew .ui-autocomplete .ui-menu-item {
   direction: rtl;
   text-align: right;
