Team page update

--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -79,7 +79,7 @@
                                 <span class="int-en">Hannah Goldberger</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Development Manager</span>
+                                <span class="int-en">Director of Digital Fundraising & Grants</span>
                             </div>
                         </div>
                     </div>
@@ -209,7 +209,7 @@
                                 <span class="int-en">Rebecca Remis</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Finance & Operations Manager</span>
+                                <span class="int-en">Sr. People & Operations Manager</span>
                             </div>
                         </div>
                     </div>
