--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -37,7 +37,7 @@
                                 <span class="int-he">חנה גולדברגר</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">מנהלת פיתוח וגיוס משאבים</span>
+                                <span class="int-he">מנהלת גיוס משאבים ומענקים</span>
                             </div>
                         </div>
                     </div>
@@ -325,7 +325,7 @@
                                 <span class="int-he">רבקה רמיס</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">מנהלת תפעול וכספים</span>
+                                <span class="int-he">מנהלת אנשים ותפעול בכירה</span>
                             </div>
                         </div>
                     </div>
