--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -2109,7 +2109,7 @@ div.interfaceLinks-row a {
   white-space:pre;
   margin: 0 5px;
 }
-.translationsPage details > ul > li:first-child:after {
+.translationsPage details > ul > li:last-child:after {
   content: none;
 }
 .readerPanel .translationsPage details > summary::-webkit-details-marker {
